# weather

./: README.md  default.nix  nixpkgs.json  shell.nix  weather.cabal  weather.nix
src/: Main.hs
