name:                weather
version:             0.1.0.0
synopsis:            Command line weather app
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable weather
  main-is:
    Main.hs
  build-depends:
    base >=4.9 && <4.10,
    brick,
    wreq,
    bytestring,
    lens,
    aeson,
    lens-aeson,
    text,
    scientific,
    vty
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:
    OverloadedStrings
